Backed out changeset a6b9c152a7d1 (bug 1140293) for mochitest failures. CLOSED TREE
UltraBlame original commit: eb3e4c2fa35edb81788b382ac8cea15a34b5f555

--- a/dom/events/test/test_bug574663.html
+++ b/dom/events/test/test_bug574663.html
@@ -232,161 +232,6 @@ Bug
 *
 *
 /
-/
-/
-SimpleTest
-'
-s
-paint_listener
-does
-not
-work
-on
-other
-windows
-so
-we
-inline
-/
-/
-a
-smaller
-version
-here
-.
-function
-waitForPaint
-(
-win
-utils
-callback
-)
-{
-win
-.
-document
-.
-documentElement
-.
-getBoundingClientRect
-(
-)
-;
-if
-(
-!
-utils
-.
-isMozAfterPaintPending
-)
-{
-callback
-(
-)
-;
-return
-;
-}
-var
-onpaint
-=
-function
-(
-)
-{
-if
-(
-!
-utils
-.
-isMozAfterPaintPending
-)
-{
-win
-.
-removeEventListener
-(
-"
-MozAfterPaint
-"
-onpaint
-)
-;
-callback
-(
-)
-;
-return
-;
-}
-}
-win
-.
-addEventListener
-(
-"
-MozAfterPaint
-"
-onpaint
-)
-;
-if
-(
-utils
-.
-isTestControllingRefreshes
-)
-{
-utils
-.
-advanceTimeAndRefresh
-(
-0
-)
-;
-}
-}
-function
-forceScrollAndWait
-(
-scrollbox
-callback
-)
-{
-let
-win
-=
-scrollbox
-.
-ownerDocument
-.
-defaultView
-;
-let
-utils
-=
-SpecialPowers
-.
-getDOMWindowUtils
-(
-win
-)
-;
-utils
-.
-advanceTimeAndRefresh
-(
-1000
-)
-;
-waitForPaint
-(
-win
-utils
-callback
-)
-;
-}
 function
 sendTouchpadScrollMotion
 (
@@ -394,7 +239,6 @@ scrollbox
 direction
 ctrl
 momentum
-callback
 )
 {
 var
@@ -431,99 +275,6 @@ isMomentum
 momentum
 }
 ;
-let
-kExtraEvents
-=
-5
-;
-var
-received
-=
-0
-;
-var
-onwheel
-=
-function
-(
-)
-{
-if
-(
-+
-+
-received
-=
-=
-1
-+
-kExtraEvents
-)
-{
-/
-/
-We
-have
-captured
-all
-the
-outstanding
-wheel
-events
-.
-Wait
-for
-the
-/
-/
-animation
-to
-add
-itself
-to
-the
-refresh
-driver
-.
-scrollbox
-.
-removeEventListener
-(
-"
-wheel
-"
-onwheel
-)
-;
-setTimeout
-(
-function
-(
-)
-{
-forceScrollAndWait
-(
-scrollbox
-callback
-)
-;
-}
-0
-)
-;
-}
-}
-;
-scrollbox
-.
-addEventListener
-(
-"
-wheel
-"
-onwheel
-)
-;
 synthesizeWheel
 (
 scrollbox
@@ -551,12 +302,11 @@ for
 let
 i
 =
-1
+0
 ;
 i
 <
-=
-kExtraEvents
+5
 ;
 +
 +
@@ -745,6 +495,35 @@ nextTest
 (
 )
 {
+if
+(
+!
+outstandingTests
+.
+length
+)
+{
+winUtils
+.
+restoreNormalRefresh
+(
+)
+;
+win
+.
+close
+(
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+return
+;
+}
 let
 [
 ctrlKey
@@ -771,9 +550,29 @@ winUtils
 .
 fullZoom
 ;
-let
-check
-=
+sendTouchpadScrollMotion
+(
+scrollbox
+1
+ctrlKey
+isMomentum
+)
+;
+winUtils
+.
+advanceTimeAndRefresh
+(
+1000
+)
+;
+/
+/
+force
+scrolling
+to
+happen
+setTimeout
+(
 function
 (
 )
@@ -939,44 +738,11 @@ Ctrl
 ;
 }
 }
-if
-(
-!
-outstandingTests
-.
-length
-)
-{
-winUtils
-.
-restoreNormalRefresh
-(
-)
-;
-win
-.
-close
-(
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
-return
-;
-}
 /
 /
 Revert
 the
 effect
-for
-the
-next
-test
 .
 sendTouchpadScrollMotion
 (
@@ -985,27 +751,29 @@ scrollbox
 1
 ctrlKey
 isMomentum
-function
-(
 )
-{
+;
+winUtils
+.
+advanceTimeAndRefresh
+(
+1000
+)
+;
+/
+/
+force
+scrolling
+to
+happen
 setTimeout
 (
 nextTest
-0
+20
 )
 ;
 }
-)
-;
-}
-sendTouchpadScrollMotion
-(
-scrollbox
-1
-ctrlKey
-isMomentum
-check
+20
 )
 ;
 }
@@ -1085,6 +853,15 @@ SimpleTest
 .
 waitForExplicitFinish
 (
+)
+;
+SimpleTest
+.
+requestFlakyTimeout
+(
+"
+untriaged
+"
 )
 ;
 <
