Bug 1147042 - Rename attachProcess to getProcess. r=ochameau
UltraBlame original commit: f94c011d8270c0b8f45e116c8852d1557398e1ed

--- a/toolkit/devtools/server/tests/mochitest/test_getProcess.html
+++ b/toolkit/devtools/server/tests/mochitest/test_getProcess.html
@@ -16,7 +16,7 @@ Bug
 Test
 DebuggerServer
 .
-attachProcess
+getProcess
 -
 -
 >
@@ -502,7 +502,7 @@ parent
 ;
 client
 .
-attachProcess
+getProcess
 (
 content
 .
