Bug 1147026 - CSP should ignore query string when checking a resource load - tests (r=dveditz)
UltraBlame original commit: fc15fab6d75b56101672ca8480fbf99e60398377

--- a/dom/base/test/csp/test_csp_path_matching.html
+++ b/dom/base/test/csp/test_csp_path_matching.html
@@ -1046,6 +1046,9 @@ src
 file_csp_testserver
 .
 sjs
+?
+file
+=
 "
 ;
 /
@@ -1060,12 +1063,27 @@ served
 src
 +
 =
-"
-?
-file
+(
+counter
+%
+2
 =
-"
-+
+=
+0
+)
+/
+/
+load
+url
+including
+ref
+:
+example
+.
+com
+#
+foo
+?
 escape
 (
 "
@@ -1080,6 +1098,43 @@ test
 csp
 /
 file_csp_path_matching
+.
+html
+"
+)
+/
+/
+load
+url
+including
+query
+:
+example
+.
+com
+?
+val
+=
+foo
+(
+bug
+1147026
+)
+:
+escape
+(
+"
+tests
+/
+dom
+/
+base
+/
+test
+/
+csp
+/
+file_csp_path_matching_incl_query
 .
 html
 "
