Bug 1145914 - Make the inspector actor send over only the most recent change for each attribute;r=dcamp
UltraBlame original commit: fde5601c5dd4bf12138d70bb24644c90a49888f4

--- a/toolkit/devtools/server/tests/mochitest/test_inspector-mutations-attr.html
+++ b/toolkit/devtools/server/tests/mochitest/test_inspector-mutations-attr.html
@@ -414,6 +414,11 @@ testRemoveAttribute
 ;
 addTest
 (
+testQueuedMutations
+)
+;
+addTest
+(
 setupFrameAttrTest
 )
 ;
@@ -430,6 +435,11 @@ testChangeAttribute
 addTest
 (
 testRemoveAttribute
+)
+;
+addTest
+(
+testQueuedMutations
 )
 ;
 function
@@ -782,7 +792,35 @@ data
 newattr
 "
 "
-changedvalue
+changedvalue1
+"
+)
+;
+attrNode
+.
+setAttribute
+(
+"
+data
+-
+newattr
+"
+"
+changedvalue2
+"
+)
+;
+attrNode
+.
+setAttribute
+(
+"
+data
+-
+newattr
+"
+"
+changedvalue3
 "
 )
 ;
@@ -793,11 +831,30 @@ once
 "
 mutations
 "
-(
-)
+mutations
 =
 >
 {
+is
+(
+mutations
+.
+length
+1
+"
+Only
+one
+mutation
+is
+sent
+for
+multiple
+queued
+attribute
+changes
+"
+)
+;
 is
 (
 attrFront
@@ -831,7 +888,7 @@ newattr
 "
 )
 "
-changedvalue
+changedvalue3
 "
 "
 Node
@@ -939,7 +996,7 @@ newattr
 "
 )
 "
-changedvalue
+changedvalue3
 "
 "
 Node
@@ -968,6 +1025,331 @@ newattr2
 )
 "
 Second
+value
+should
+be
+removed
+.
+"
+)
+;
+runNextTest
+(
+)
+;
+}
+)
+}
+function
+testQueuedMutations
+(
+)
+{
+/
+/
+All
+modifications
+to
+each
+attribute
+should
+be
+queued
+in
+one
+mutation
+event
+.
+attrNode
+.
+removeAttribute
+(
+"
+data
+-
+newattr
+"
+)
+;
+attrNode
+.
+setAttribute
+(
+"
+data
+-
+newattr
+"
+"
+1
+"
+)
+;
+attrNode
+.
+removeAttribute
+(
+"
+data
+-
+newattr
+"
+)
+;
+attrNode
+.
+setAttribute
+(
+"
+data
+-
+newattr
+"
+"
+2
+"
+)
+;
+attrNode
+.
+removeAttribute
+(
+"
+data
+-
+newattr
+"
+)
+;
+for
+(
+var
+i
+=
+0
+;
+i
+<
+=
+1000
+;
+i
++
++
+)
+{
+attrNode
+.
+setAttribute
+(
+"
+data
+-
+newattr2
+"
+i
+)
+;
+}
+attrNode
+.
+removeAttribute
+(
+"
+data
+-
+newattr3
+"
+)
+;
+attrNode
+.
+setAttribute
+(
+"
+data
+-
+newattr3
+"
+"
+1
+"
+)
+;
+attrNode
+.
+removeAttribute
+(
+"
+data
+-
+newattr3
+"
+)
+;
+attrNode
+.
+setAttribute
+(
+"
+data
+-
+newattr3
+"
+"
+2
+"
+)
+;
+attrNode
+.
+removeAttribute
+(
+"
+data
+-
+newattr3
+"
+)
+;
+attrNode
+.
+setAttribute
+(
+"
+data
+-
+newattr3
+"
+"
+3
+"
+)
+;
+gWalker
+.
+once
+(
+"
+mutations
+"
+mutations
+=
+>
+{
+is
+(
+mutations
+.
+length
+3
+"
+Only
+one
+mutation
+each
+is
+sent
+for
+multiple
+queued
+attribute
+changes
+"
+)
+;
+is
+(
+attrFront
+.
+attributes
+.
+length
+3
+"
+Should
+have
+id
+data
+-
+newattr2
+and
+data
+-
+newattr3
+.
+"
+)
+;
+is
+(
+attrFront
+.
+getAttribute
+(
+"
+data
+-
+newattr2
+"
+)
+"
+1000
+"
+"
+Node
+front
+should
+still
+have
+the
+correct
+value
+"
+)
+;
+is
+(
+attrFront
+.
+getAttribute
+(
+"
+data
+-
+newattr3
+"
+)
+"
+3
+"
+"
+Node
+front
+should
+still
+have
+the
+correct
+value
+"
+)
+;
+ok
+(
+!
+attrFront
+.
+hasAttribute
+(
+"
+data
+-
+newattr
+"
+)
+"
+Attribute
 value
 should
 be
