Bug 1038238 - Part 0: Make js/src/vm/SavedStacks.h use 1-based column numbers, like js::ComputeStackString and other browsers do; r=jorendorff
https://bugzilla.mozilla.org/show_bug.cgi?id=1038238

UltraBlame original commit: fadf551562b882a3265ea0e10eee74bb028bfcd9

--- a/dom/bindings/test/test_promise_rejections_from_jsimplemented.html
+++ b/dom/bindings/test/test_promise_rejections_from_jsimplemented.html
@@ -437,7 +437,7 @@ html
 :
 44
 :
-6
+7
 \
 n
 "
@@ -652,6 +652,35 @@ html
 :
 11
 \
+nAsync
+*
+doTest
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+tests
+/
+dom
+/
+bindings
+/
+test
+/
+test_promise_rejections_from_jsimplemented
+.
+html
+:
+60
+:
+7
+\
 n
 "
 )
@@ -834,7 +863,7 @@ html
 :
 79
 :
-6
+7
 \
 n
 "
@@ -904,7 +933,7 @@ html
 :
 85
 :
-6
+7
 \
 n
 "
