Bug 1147985 - Avoid blank space when heap size graph is unavailable, r=terrence
UltraBlame original commit: 1de963c566819bf301655f127b7f56dd6d755183

--- a/js/src/devtools/gc-ubench/index.html
+++ b/js/src/devtools/gc-ubench/index.html
@@ -403,6 +403,102 @@ canvas
 >
 <
 div
+id
+=
+"
+memgraph
+-
+disabled
+"
+style
+=
+"
+display
+:
+none
+"
+>
+<
+i
+>
+No
+performance
+.
+mozMemory
+object
+available
+.
+Set
+dom
+.
+enable_memory_stats
+to
+True
+to
+see
+heap
+size
+info
+.
+<
+/
+i
+>
+<
+/
+div
+>
+<
+hr
+>
+<
+div
+id
+=
+'
+track
+-
+sizes
+-
+div
+'
+>
+Show
+heap
+size
+graph
+:
+<
+input
+id
+=
+'
+track
+-
+sizes
+'
+type
+=
+'
+checkbox
+'
+onclick
+=
+"
+trackHeapSizes
+(
+this
+.
+checked
+)
+"
+>
+<
+/
+div
+>
+<
+div
 >
 <
 input
