Bug 1046245 - enumerateDevices (harmless interface version). r=smaug, r=jesup
UltraBlame original commit: 609f3ca64004a62e4a8d1bea24aa779104e7e46f

--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -6518,6 +6518,25 @@ DOM
 peer
 !
 "
+MediaDeviceInfo
+"
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
+"
 MediaDevices
 "
 /
