Bug 1147699 - Part 4: Add a test for FetchEvent.request.context when intercepting a responsive image load; r=nsm
UltraBlame original commit: 8fb48d7a6ccdadeb55814efcfe576e9710c035c4

--- a/dom/workers/test/serviceworkers/test_request_context.html
+++ b/dom/workers/test/serviceworkers/test_request_context.html
@@ -412,6 +412,30 @@ set
 "
 dom
 .
+image
+.
+picture
+.
+enabled
+"
+true
+]
+[
+"
+dom
+.
+image
+.
+srcset
+.
+enabled
+"
+true
+]
+[
+"
+dom
+.
 serviceWorkers
 .
 exemptFromPerDomainMax
