--- a/dom/workers/test/serviceworkers/test_request_context.html
+++ b/dom/workers/test/serviceworkers/test_request_context.html
@@ -418,6 +418,25 @@ true
 ]
 [
 "
+browser
+.
+send_pings
+"
+true
+]
+[
+"
+browser
+.
+send_pings
+.
+max_per_link
+"
+-
+1
+]
+[
+"
 dom
 .
 image
