Bug 1147699 follow-up: Disable the plugin test on Mulet
Landed on a CLOSED TREE in order to fix the test bustage.

UltraBlame original commit: 368af8026cedb21869a8937a25dc2f71a1d0d763

--- a/dom/workers/test/serviceworkers/test_request_context.html
+++ b/dom/workers/test/serviceworkers/test_request_context.html
@@ -416,6 +416,36 @@ nsIPluginTag
 STATE_ENABLED
 )
 ;
+function
+isMulet
+(
+)
+{
+try
+{
+return
+SpecialPowers
+.
+getBoolPref
+(
+"
+b2g
+.
+is_mulet
+"
+)
+;
+}
+catch
+(
+e
+)
+{
+return
+false
+;
+}
+}
 var
 iframe
 ;
