Bug 1132208 - "Remove dead code from framerate actor now in GraphsWorker.js". r=jsantell
UltraBlame original commit: 43e237f4a4266054e37b61d5df86e1079ca85e19

--- a/toolkit/devtools/server/tests/mochitest/test_framerate_01.html
+++ b/toolkit/devtools/server/tests/mochitest/test_framerate_01.html
@@ -320,6 +320,214 @@ framerate
 "
 )
 ;
+function
+plotFPS
+(
+ticks
+interval
+=
+100
+clamp
+=
+60
+)
+{
+var
+timeline
+=
+[
+]
+;
+var
+totalTicks
+=
+ticks
+.
+length
+;
+/
+/
+If
+the
+refresh
+driver
+didn
+'
+t
+get
+a
+chance
+to
+tick
+before
+the
+/
+/
+recording
+was
+stopped
+assume
+framerate
+was
+0
+.
+if
+(
+totalTicks
+=
+=
+0
+)
+{
+timeline
+.
+push
+(
+{
+delta
+:
+0
+value
+:
+0
+}
+)
+;
+timeline
+.
+push
+(
+{
+delta
+:
+interval
+value
+:
+0
+}
+)
+;
+return
+timeline
+;
+}
+var
+frameCount
+=
+0
+;
+var
+prevTime
+=
+ticks
+[
+0
+]
+;
+for
+(
+var
+i
+=
+1
+;
+i
+<
+totalTicks
+;
+i
++
++
+)
+{
+var
+currTime
+=
+ticks
+[
+i
+]
+;
+frameCount
++
++
+;
+var
+elapsedTime
+=
+currTime
+-
+prevTime
+;
+if
+(
+elapsedTime
+<
+interval
+)
+{
+continue
+;
+}
+var
+framerate
+=
+Math
+.
+min
+(
+1000
+/
+(
+elapsedTime
+/
+frameCount
+)
+clamp
+)
+;
+timeline
+.
+push
+(
+{
+delta
+:
+prevTime
+value
+:
+framerate
+}
+)
+;
+timeline
+.
+push
+(
+{
+delta
+:
+currTime
+value
+:
+framerate
+}
+)
+;
+frameCount
+=
+0
+;
+prevTime
+=
+currTime
+;
+}
+return
+timeline
+;
+}
+;
 if
 (
 !
@@ -487,8 +695,6 @@ available
 var
 timeline
 =
-FramerateFront
-.
 plotFPS
 (
 rawData
