Bug 1150821 -  Update web-platform-tests to revision 1bb38c25b4720fbfd8ca086ef9275ac3e465c659, a=testonly
UltraBlame original commit: f2f5bb353be9f5f1b42255ed52d35a492e4ba1ff

--- a/testing/web-platform/tests/html/semantics/embedded-content/the-img-element/srcset/parse-a-srcset-attribute.html
+++ b/testing/web-platform/tests/html/semantics/embedded-content/the-img-element/srcset/parse-a-srcset-attribute.html
@@ -1492,6 +1492,20 @@ a
 '
 >
 <
+!
+-
+-
+should
+fail
+for
+x
+-
+only
+impl
+-
+-
+>
+<
 img
 srcset
 =
@@ -1511,6 +1525,20 @@ data
 :
 a
 '
+>
+<
+!
+-
+-
+should
+fail
+for
+x
+-
+only
+impl
+-
+-
 >
 <
 img
@@ -1585,6 +1613,40 @@ expect
 =
 '
 '
+>
+<
+img
+srcset
+=
+'
+data
+:
+a
+1w
+'
+data
+-
+expect
+=
+'
+data
+:
+a
+'
+>
+<
+!
+-
+-
+should
+fail
+for
+x
+-
+only
+impl
+-
+-
 >
 <
 img
