--- a/testing/web-platform/tests/pointerevents/pointerevent_constructor.html
+++ b/testing/web-platform/tests/pointerevents/pointerevent_constructor.html
@@ -136,13 +136,6 @@ head
 >
 <
 body
-onload
-=
-"
-run
-(
-)
-"
 >
 <
 h1
@@ -221,32 +214,19 @@ div
 script
 >
 var
-eventTested
-=
-false
-;
-var
 detected_pointertypes
 =
 {
 }
-;
-setup
-(
-{
-explicit_done
-:
-true
-}
-)
 ;
 add_completion_callback
 (
 showPointerTypes
 )
 ;
+async_test
+(
 function
-run
 (
 )
 {
@@ -336,18 +316,16 @@ testIsPrimary
 =
 true
 ;
-var
-pointerEventCustom
-;
-var
-pointerEventDefault
-;
 on_event
 (
 target0
 "
 pointerover
 "
+this
+.
+step_func
+(
 function
 (
 event
@@ -511,6 +489,7 @@ pressure
 ;
 }
 )
+)
 ;
 on_event
 (
@@ -518,6 +497,10 @@ target0
 "
 pointerout
 "
+this
+.
+step_func
+(
 function
 (
 event
@@ -613,8 +596,17 @@ false
 ;
 }
 )
+)
 ;
-test
+on_event
+(
+window
+"
+load
+"
+this
+.
+step_func_done
 (
 function
 (
@@ -628,6 +620,7 @@ PointerEvent
 undefined
 )
 ;
+var
 pointerEventCustom
 =
 new
@@ -734,6 +727,7 @@ dispatchEvent
 pointerEventCustom
 )
 ;
+var
 pointerEventDefault
 =
 new
@@ -751,18 +745,16 @@ dispatchEvent
 pointerEventDefault
 )
 ;
-done
-(
-)
-;
 }
 "
 PointerEvent
 constructor
 "
 )
+)
 ;
 }
+)
 <
 /
 script
