Bug 1146875 - Fix the leak-gauge.html broken and add a encoding declaration. r=dbaron
UltraBlame original commit: 1ffda5f76e3d8d473d2baa28149c472f5749aef9

--- a/tools/leak-gauge/leak-gauge.html
+++ b/tools/leak-gauge/leak-gauge.html
@@ -126,6 +126,17 @@ US
 head
 >
 <
+meta
+charset
+=
+"
+UTF
+-
+8
+"
+/
+>
+<
 title
 >
 Leak
@@ -184,7 +195,7 @@ javascript
 "
 >
 function
-runFile
+runfile
 (
 file
 )
