Bug 1143934 - Fix assorted forms mochitests for e10s-compatibility. r=smaug
The bug 143220 test no longer attempts to read the chrome value property
from the input elements, because that would use PBlob::GetFilePath which
isn't allowed on B2G, and those checks aren't really necessary anymore.

UltraBlame original commit: d1f61a3f4fc37465201fd134fd6b58b201983bb9

--- a/dom/html/test/forms/test_min_attribute.html
+++ b/dom/html/test/forms/test_min_attribute.html
@@ -1547,87 +1547,20 @@ file
 '
 :
 var
-dirSvc
+file
 =
-SpecialPowers
-.
-Cc
+new
+File
+(
 [
-"
-mozilla
-.
-org
-/
-file
-/
-directory_service
-;
-1
-"
+'
+'
 ]
-.
-getService
-(
-SpecialPowers
-.
-Ci
-.
-nsIProperties
-)
-;
-var
-file
-=
-dirSvc
-.
-get
-(
-"
-ProfD
-"
-SpecialPowers
-.
-Ci
-.
-nsIFile
-)
-;
-file
-.
-append
-(
 '
 635499_file
 '
 )
 ;
-/
-/
-Only
-the
-file
-'
-s
-path
-is
-used
-so
-it
-doesn
-'
-t
-need
-to
-be
-created
-.
-/
-/
-See
-also
-bug
-1058977
-.
 SpecialPowers
 .
 wrap
@@ -1635,11 +1568,12 @@ wrap
 input
 )
 .
-value
-=
+mozSetFileArray
+(
+[
 file
-.
-path
+]
+)
 ;
 checkValidity
 (
