--- a/dom/html/test/forms/test_pattern_attribute.html
+++ b/dom/html/test/forms/test_pattern_attribute.html
@@ -412,6 +412,17 @@ com
 ;
 }
 else
+if
+(
+element
+.
+type
+=
+=
+'
+file
+'
+)
 {
 element
 .
@@ -427,6 +438,37 @@ wrap
 (
 element
 )
+.
+mozSetFileArray
+(
+[
+new
+File
+(
+[
+"
+foo
+"
+]
+"
+foo
+"
+)
+]
+)
+;
+}
+else
+{
+element
+.
+pattern
+=
+"
+foo
+"
+;
+element
 .
 value
 =
@@ -533,6 +575,17 @@ org
 ;
 }
 else
+if
+(
+element
+.
+type
+=
+=
+'
+file
+'
+)
 {
 element
 .
@@ -548,6 +601,37 @@ wrap
 (
 element
 )
+.
+mozSetFileArray
+(
+[
+new
+File
+(
+[
+"
+bar
+"
+]
+"
+bar
+"
+)
+]
+)
+;
+}
+else
+{
+element
+.
+pattern
+=
+"
+foo
+"
+;
+element
 .
 value
 =
