--- a/dom/html/test/forms/test_required_attribute.html
+++ b/dom/html/test/forms/test_required_attribute.html
@@ -2219,101 +2219,16 @@ appendChild
 element
 )
 ;
-function
-createFile
-(
-fileName
-)
-{
 var
-dirSvc
+file
 =
-SpecialPowers
-.
-Cc
+new
+File
+(
 [
 "
-mozilla
-.
-org
-/
-file
-/
-directory_service
-;
-1
 "
 ]
-.
-getService
-(
-SpecialPowers
-.
-Ci
-.
-nsIProperties
-)
-;
-var
-testFile
-=
-dirSvc
-.
-get
-(
-"
-ProfD
-"
-SpecialPowers
-.
-Ci
-.
-nsIFile
-)
-;
-testFile
-.
-append
-(
-fileName
-)
-;
-/
-/
-Only
-the
-file
-'
-s
-path
-is
-used
-so
-it
-doesn
-'
-t
-need
-to
-be
-created
-.
-/
-/
-See
-also
-bug
-1058977
-.
-return
-testFile
-;
-}
-var
-file
-=
-createFile
-(
 "
 345822_file
 "
@@ -2361,11 +2276,12 @@ wrap
 element
 )
 .
-value
-=
+mozSetFileArray
+(
+[
 file
-.
-path
+]
+)
 ;
 checkNotSufferingFromBeingMissing
 (
@@ -2414,11 +2330,12 @@ wrap
 element
 )
 .
-value
-=
+mozSetFileArray
+(
+[
 file
-.
-path
+]
+)
 ;
 element
 .
