--- a/dom/html/test/test_bug143220.html
+++ b/dom/html/test/test_bug143220.html
@@ -219,6 +219,12 @@ type
 text
 /
 javascript
+;
+version
+=
+1
+.
+7
 "
 >
 /
@@ -231,88 +237,112 @@ Bug
 *
 *
 /
-var
-leafName
-;
-var
-fullPath
-;
-function
-initVals
+SimpleTest
+.
+waitForExplicitFinish
 (
+)
+;
+const
+helperURL
+=
+SimpleTest
+.
+getTestFileURL
+(
+"
+simpleFileOpener
+.
+js
+"
+)
+;
+const
+helper
+=
+SpecialPowers
+.
+loadChromeScript
+(
+helperURL
+)
+;
+helper
+.
+addMessageListener
+(
+"
+fail
+"
+function
+onFail
+(
+message
 )
 {
-var
-dirSvc
-=
-SpecialPowers
-.
-Cc
-[
-"
-mozilla
-.
-org
-/
-file
-/
-directory_service
-;
-1
-"
-]
-.
-getService
+is
 (
-SpecialPowers
-.
-Ci
-.
-nsIProperties
-)
-;
-var
-file
-=
-dirSvc
-.
-get
-(
-"
-XpcomLib
-"
-SpecialPowers
-.
-Ci
-.
-nsILocalFile
-)
-;
-isnot
-(
-file
+message
 null
 "
-Must
-have
-file
-here
+chrome
+script
+failed
 "
 )
 ;
-leafName
-=
-file
+SimpleTest
 .
-leafName
-;
-fullPath
-=
-file
-.
-path
+finish
+(
+)
 ;
 }
+)
+;
+helper
+.
+addMessageListener
+(
+"
+file
+.
+opened
+"
+onFileOpened
+)
+;
+helper
+.
+sendAsyncMessage
+(
+"
+file
+.
+open
+"
+"
+test_bug143220
+.
+txt
+"
+)
+;
+function
+onFileOpened
+(
+message
+)
+{
+const
+{
+leafName
+fullPath
+domFile
+}
+=
+message
+;
 function
 initControl1
 (
@@ -329,33 +359,11 @@ i1
 )
 )
 .
-value
-=
-fullPath
-;
-is
+mozSetFileArray
 (
-SpecialPowers
-.
-wrap
-(
-(
-"
-i1
-"
-)
-)
-.
-value
-fullPath
-"
-Should
-have
-set
-full
-path
-1
-"
+[
+domFile
+]
 )
 ;
 }
@@ -375,40 +383,14 @@ i2
 )
 )
 .
-value
-=
-fullPath
-;
-is
+mozSetFileArray
 (
-SpecialPowers
-.
-wrap
-(
-(
-"
-i2
-"
-)
-)
-.
-value
-fullPath
-"
-Should
-have
-set
-full
-path
-2
-"
+[
+domFile
+]
 )
 ;
 }
-initVals
-(
-)
-;
 /
 /
 Check
@@ -520,6 +502,49 @@ value
 "
 )
 ;
+helper
+.
+addMessageListener
+(
+"
+file
+.
+removed
+"
+onFileRemoved
+)
+;
+helper
+.
+sendAsyncMessage
+(
+"
+file
+.
+remove
+"
+null
+)
+;
+}
+function
+onFileRemoved
+(
+)
+{
+helper
+.
+destroy
+(
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
 <
 /
 script
