--- a/dom/html/test/test_formSubmission.html
+++ b/dom/html/test/test_formSubmission.html
@@ -7262,16 +7262,53 @@ waitForExplicitFinish
 (
 )
 ;
+const
+placeholder_myFile1
+=
+{
+}
+;
+const
+placeholder_myFile2
+=
+{
+}
+;
+const
+placeholder_emptyFile
+=
+{
+}
+;
 var
 myFile1
 myFile2
 emptyFile
 ;
+let
+openerURL
+=
+SimpleTest
+.
+getTestFileURL
 (
-function
-setFileNames
-(
+"
+formSubmission_chrome
+.
+js
+"
 )
+;
+let
+opener
+=
+SpecialPowers
+.
+loadChromeScript
+(
+openerURL
+)
+;
 {
 let
 xhr
@@ -7303,25 +7340,34 @@ send
 (
 )
 ;
-var
+let
 basePath
 =
 xhr
 .
 responseText
 ;
-singleFile
-=
-basePath
-+
-"
-file_formSubmission_text
+opener
 .
-txt
+addMessageListener
+(
 "
+files
+.
+opened
+"
+onFilesOpened
+)
 ;
-multiFile
-=
+opener
+.
+sendAsyncMessage
+(
+"
+files
+.
+open
+"
 [
 basePath
 +
@@ -7337,6 +7383,41 @@ file_formSubmission_img
 .
 jpg
 "
+]
+)
+;
+}
+function
+onFilesOpened
+(
+files
+)
+{
+let
+[
+textFile
+imageFile
+]
+=
+files
+;
+opener
+.
+destroy
+(
+)
+;
+let
+singleFile
+=
+textFile
+;
+let
+multiFile
+=
+[
+textFile
+imageFile
 ]
 ;
 var
@@ -7392,12 +7473,9 @@ wrap
 input
 )
 .
-mozSetFileNameArray
+mozSetFileArray
 (
 multiFile
-multiFile
-.
-length
 )
 ;
 }
@@ -7410,9 +7488,12 @@ wrap
 input
 )
 .
-value
-=
+mozSetFileArray
+(
+[
 singleFile
+]
+)
 ;
 }
 }
@@ -7448,12 +7529,9 @@ wrap
 input
 )
 .
-mozSetFileNameArray
+mozSetFileArray
 (
 multiFile
-multiFile
-.
-length
 )
 ;
 myFile1
@@ -7516,10 +7594,22 @@ stream
 "
 }
 ;
-}
-)
+/
+/
+Now
+actually
+run
+the
+tests
+;
+see
+below
+.
+onFilesSet
 (
 )
+;
+}
 ;
 var
 expectedSub
@@ -8289,7 +8379,7 @@ file_1
 "
 value
 :
-myFile1
+placeholder_myFile1
 }
 {
 name
@@ -8299,7 +8389,7 @@ file_2
 "
 value
 :
-emptyFile
+placeholder_emptyFile
 }
 /
 /
@@ -8313,7 +8403,7 @@ file_3
 "
 value
 :
-myFile1
+placeholder_myFile1
 }
 {
 name
@@ -8323,7 +8413,7 @@ file_4
 "
 value
 :
-myFile1
+placeholder_myFile1
 }
 {
 name
@@ -8333,7 +8423,7 @@ file_4
 "
 value
 :
-myFile2
+placeholder_myFile2
 }
 {
 name
@@ -8343,7 +8433,7 @@ file_5
 "
 value
 :
-emptyFile
+placeholder_emptyFile
 }
 /
 /
@@ -9045,6 +9135,7 @@ msel_31_v1
 }
 ]
 ;
+var
 expectedAugment
 =
 [
@@ -9096,7 +9187,7 @@ aNameFile1
 "
 value
 :
-myFile1
+placeholder_myFile1
 }
 {
 name
@@ -9106,7 +9197,7 @@ aNameFile2
 "
 value
 :
-myFile2
+placeholder_myFile2
 }
 /
 /
@@ -9881,6 +9972,13 @@ state
 }
 var
 gen
+;
+function
+onFilesSet
+(
+)
+{
+gen
 =
 runTest
 (
@@ -9901,6 +9999,7 @@ next
 }
 )
 ;
+}
 function
 runTest
 (
@@ -9993,7 +10092,8 @@ o
 value
 =
 =
-myFile1
+=
+placeholder_myFile1
 )
 {
 o
@@ -10029,7 +10129,8 @@ o
 value
 =
 =
-myFile2
+=
+placeholder_myFile2
 )
 {
 o
@@ -10065,7 +10166,8 @@ o
 value
 =
 =
-emptyFile
+=
+placeholder_emptyFile
 )
 {
 o
