--- a/dom/base/test/test_bug345339.html
+++ b/dom/base/test/test_bug345339.html
@@ -230,6 +230,12 @@ type
 text
 /
 javascript
+;
+version
+=
+1
+.
+7
 "
 >
 /
@@ -248,8 +254,40 @@ waitForExplicitFinish
 (
 )
 ;
-var
-filePath
+const
+testData
+=
+"
+Test
+data
+\
+n
+"
+;
+let
+file
+=
+new
+File
+(
+[
+testData
+]
+"
+345339_test
+.
+file
+"
+{
+type
+:
+"
+text
+/
+plain
+"
+}
+)
 ;
 function
 afterLoad
@@ -332,91 +370,6 @@ value
 gecko
 "
 ;
-var
-file
-=
-SpecialPowers
-.
-Cc
-[
-"
-mozilla
-.
-org
-/
-file
-/
-directory_service
-;
-1
-"
-]
-.
-getService
-(
-SpecialPowers
-.
-Ci
-.
-nsIProperties
-)
-.
-get
-(
-"
-TmpD
-"
-SpecialPowers
-.
-Ci
-.
-nsILocalFile
-)
-;
-file
-.
-append
-(
-"
-345339_test
-.
-file
-"
-)
-;
-/
-/
-Only
-the
-file
-'
-s
-path
-is
-used
-so
-it
-doesn
-'
-t
-need
-to
-be
-created
-.
-/
-/
-See
-also
-bug
-1058977
-.
-filePath
-=
-file
-.
-path
-;
 SpecialPowers
 .
 wrap
@@ -431,9 +384,12 @@ file
 "
 )
 .
-value
-=
-filePath
+mozSetFileArray
+(
+[
+file
+]
+)
 ;
 /
 *
@@ -604,14 +560,29 @@ preserved
 "
 )
 ;
-is
-(
-SpecialPowers
-.
-wrap
-(
+/
+/
+The
+new
+file
+object
+isn
+'
+t
+=
+=
+=
+but
+it
+'
+s
+extensionally
+equal
+:
+let
+newFile
+=
 iframeDoc
-)
 .
 getElementById
 (
@@ -620,20 +591,130 @@ file
 "
 )
 .
-value
-filePath
+files
+[
+0
+]
+;
+for
+(
+let
+prop
+of
+[
+"
+name
+"
+"
+lastModified
+"
+"
+size
+"
+"
+type
+"
+]
+)
+{
+is
+(
+newFile
+[
+prop
+]
+file
+[
+prop
+]
 "
 file
 field
-value
+"
++
+prop
++
+"
+property
 preserved
 "
 )
 ;
+}
+let
+reader
+=
+new
+FileReader
+(
+)
+;
+reader
+.
+onloadend
+=
+function
+(
+)
+{
 SimpleTest
 .
 finish
 (
+)
+;
+}
+;
+reader
+.
+onload
+=
+function
+(
+)
+{
+is
+(
+reader
+.
+result
+testData
+"
+file
+field
+contents
+preserved
+"
+)
+}
+;
+reader
+.
+onerror
+=
+function
+(
+)
+{
+is
+(
+reader
+.
+error
+null
+"
+FileReader
+error
+"
+)
+;
+}
+;
+reader
+.
+readAsText
+(
+newFile
 )
 ;
 }
