Bug 1109751 - Consume FormData support in Fetch API. r=baku
UltraBlame original commit: add6d1bd2e52e6b8fecec602031bd66f4d99d709

--- a/dom/tests/mochitest/fetch/test_formdataparsing.html
+++ b/dom/tests/mochitest/fetch/test_formdataparsing.html
@@ -11,7 +11,6 @@ the
 Public
 Domain
 .
--
 http
 :
 /
@@ -45,11 +44,12 @@ head
 <
 title
 >
-Test
-Fetch
-Headers
+Bug
+1109751
 -
-Basic
+Test
+FormData
+parsing
 <
 /
 title
@@ -116,6 +116,49 @@ head
 body
 >
 <
+p
+id
+=
+"
+display
+"
+>
+<
+/
+p
+>
+<
+div
+id
+=
+"
+content
+"
+style
+=
+"
+display
+:
+none
+"
+>
+<
+/
+div
+>
+<
+pre
+id
+=
+"
+test
+"
+>
+<
+/
+pre
+>
+<
 script
 type
 =
@@ -175,7 +218,7 @@ javascript
 testScript
 (
 "
-test_headers_common
+test_formdataparsing
 .
 js
 "
