--- a/dom/tests/mochitest/fetch/test_fetch_basic.html
+++ b/dom/tests/mochitest/fetch/test_fetch_basic.html
@@ -174,6 +174,27 @@ javascript
 src
 =
 "
+utils
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
 fetch_test_framework
 .
 js
