Bug 1139743 (part 3) - Cache OAuth tokens. r=ckarlof
UltraBlame original commit: a450bb0b9d62e4cfc74aaeb507792b9288d1ed44

--- a/services/fxaccounts/tests/mochitest/test_invalidEmailCase.html
+++ b/services/fxaccounts/tests/mochitest/test_invalidEmailCase.html
@@ -477,6 +477,32 @@ data
 )
 ;
 }
+getOAuthTokens
+(
+)
+{
+return
+Promise
+.
+resolve
+(
+null
+)
+;
+}
+setOAuthTokens
+(
+contents
+)
+{
+return
+Promise
+.
+resolve
+(
+)
+;
+}
 }
 )
 ;
