Bug 1083410 - Refactor manifest processor for Aurora compat. r=baku, r=ehsan
 * dropped using ES6 class

CLOSED TREE

UltraBlame original commit: f9585613bd1af9188c5b4fcfe8a53b7b433ed700

--- a/dom/manifest/test/test_ManifestProcessor_start_url.html
+++ b/dom/manifest/test/test_ManifestProcessor_start_url.html
@@ -221,7 +221,7 @@ start_url
 toString
 (
 )
-docLocation
+docURL
 .
 toString
 (
@@ -296,7 +296,7 @@ start_url
 toString
 (
 )
-docLocation
+docURL
 .
 toString
 (
@@ -360,7 +360,7 @@ start_url
 toString
 (
 )
-docLocation
+docURL
 .
 toString
 (
