--- a/dom/html/test/test_bug1146116.html
+++ b/dom/html/test/test_bug1146116.html
@@ -316,6 +316,28 @@ txt
 )
 ;
 function
+getGlobal
+(
+thing
+)
+{
+return
+SpecialPowers
+.
+unwrap
+(
+SpecialPowers
+.
+Cu
+.
+getGlobalForObject
+(
+thing
+)
+)
+;
+}
+function
 onFileOpened
 (
 message
@@ -340,15 +362,28 @@ file
 "
 )
 ;
-isnot
+is
 (
-SpecialPowers
-.
-Cu
-.
-getGlobalForObject
+getGlobal
 (
 elem
+)
+window
+"
+getGlobal
+(
+)
+works
+as
+expected
+"
+)
+;
+isnot
+(
+getGlobal
+(
+file
 )
 window
 "
@@ -376,15 +411,7 @@ file
 ;
 is
 (
-SpecialPowers
-.
-unwrap
-(
-SpecialPowers
-.
-Cu
-.
-getGlobalForObject
+getGlobal
 (
 elem
 .
@@ -392,7 +419,6 @@ files
 [
 0
 ]
-)
 )
 window
 "
