--- a/dom/ipc/tests/test_NuwaProcessDeadlock.html
+++ b/dom/ipc/tests/test_NuwaProcessDeadlock.html
@@ -83,6 +83,13 @@ head
 >
 <
 body
+onload
+=
+"
+setup
+(
+)
+"
 >
 <
 script
@@ -105,309 +112,19 @@ use
 strict
 "
 ;
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-SimpleTest
-.
-requestFlakyTimeout
-(
-"
-untriaged
-"
-)
-;
-function
-TestLoader
-(
-)
-{
-}
-TestLoader
-.
-prototype
-=
-{
-_waitingTask
-:
-0
-onTestReady
-:
-null
-unlockTestReady
-:
-function
-(
-)
-{
-this
-.
-_waitingTask
--
--
-;
-this
-.
-_maybeLoadTest
-(
-)
-;
-}
-lockTestReady
-:
-function
-(
-)
-{
-this
-.
-_waitingTask
-+
-+
-;
-}
-_maybeLoadTest
-:
-function
-(
-)
-{
-if
-(
-this
-.
-_waitingTask
-=
-=
-0
-)
-{
-this
-.
-onTestReady
-(
-)
-;
-}
-}
-}
-var
-testLoader
-=
-new
-TestLoader
-(
-)
-;
-testLoader
-.
-lockTestReady
-(
-)
-;
-window
-.
-addEventListener
-(
-'
-load
-'
-function
-(
-)
-{
-testLoader
-.
-unlockTestReady
-(
-)
-;
-}
-)
-;
-function
-setPref
-(
-pref
-value
-)
-{
-testLoader
-.
-lockTestReady
-(
-)
-;
-if
-(
-value
-!
-=
-=
-undefined
-&
-&
-value
-!
-=
-=
-null
-)
-{
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-'
-set
-'
-:
-[
-[
-pref
-value
-]
-]
-}
-function
-(
-)
-{
-testLoader
-.
-unlockTestReady
-(
-)
-;
-}
-)
-;
-}
-else
-{
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-'
-clear
-'
-:
-[
-[
-pref
-]
-]
-}
-function
-(
-)
-{
-testLoader
-.
-unlockTestReady
-(
-)
-;
-}
-)
-;
-}
-}
-setPref
-(
-'
-dom
-.
-ipc
-.
-processPriorityManager
-.
-testMode
-'
-true
-)
-;
-setPref
-(
-'
-dom
-.
-ipc
-.
-processPriorityManager
-.
-enabled
-'
-true
-)
-;
-setPref
-(
-'
-dom
-.
-ipc
-.
-processPriorityManager
-.
-BACKGROUND
-.
-LRUPoolLevels
-'
-2
-)
-;
-setPref
-(
-'
-dom
-.
-ipc
-.
-processPrelaunch
-.
-testMode
-'
-true
-)
-;
-/
-/
-For
-testing
-deadlock
-.
 function
 runTest
 (
 )
 {
-/
-/
-Shutdown
-preallocated
-process
-.
-SpecialPowers
-.
-setBoolPref
+info
 (
-'
-dom
-.
-ipc
-.
-processPrelaunch
-.
-enabled
-'
-false
+"
+Launch
+the
+Nuwa
+process
+"
 )
 ;
 let
@@ -567,7 +284,7 @@ ready
 "
 )
 ;
-testEnd
+shutdown
 (
 )
 ;
@@ -575,40 +292,22 @@ testEnd
 }
 }
 ;
-let
-timeout
-=
-setTimeout
-(
 function
+shutdown
 (
 )
 {
-ok
+info
 (
-false
 "
-Nuwa
-process
-is
-not
-launched
+Shut
+down
+the
+test
+case
 "
 )
 ;
-testEnd
-(
-)
-;
-}
-240000
-)
-;
-function
-testEnd
-(
-)
-{
 cpmm
 .
 removeMessageListener
@@ -643,25 +342,6 @@ new
 process
 "
 msgHandler
-)
-;
-clearTimeout
-(
-timeout
-)
-;
-setPref
-(
-'
-dom
-.
-ipc
-.
-processPrelaunch
-.
-testMode
-'
-false
 )
 ;
 SimpleTest
@@ -739,12 +419,91 @@ true
 )
 ;
 }
-testLoader
+function
+setup
+(
+)
+{
+info
+(
+"
+Set
+up
+preferences
+for
+testing
+deadlock
+in
+the
+Nuwa
+process
 .
-onTestReady
-=
-runTest
+"
+)
 ;
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+'
+set
+'
+:
+[
+[
+'
+dom
+.
+ipc
+.
+processPrelaunch
+.
+enabled
+'
+false
+]
+[
+'
+dom
+.
+ipc
+.
+preallocatedProcessManager
+.
+testMode
+'
+true
+]
+[
+'
+dom
+.
+ipc
+.
+processPrelaunch
+.
+testMode
+'
+true
+]
+/
+/
+For
+testing
+deadlock
+]
+}
+runTest
+)
+;
+}
 <
 /
 script
