Bug 1151940 part 3.  Make some writable cssom-view attributes that we only allow setting from chrome act the way readonly replaceables would when called from content.  r=smaug
UltraBlame original commit: 7a3a671dedd592560892f6af6cb622903110fa27

--- a/dom/tests/mochitest/bugs/test_bug400204.html
+++ b/dom/tests/mochitest/bugs/test_bug400204.html
@@ -329,6 +329,48 @@ not
 ;
 /
 /
+Snag
+the
+canonical
+getter
+and
+setter
+var
+innerWidthGetter
+=
+Object
+.
+getOwnPropertyDescriptor
+(
+c
+.
+contentWindow
+"
+innerWidth
+"
+)
+.
+get
+;
+var
+innerHeightGetter
+=
+Object
+.
+getOwnPropertyDescriptor
+(
+c
+.
+contentWindow
+"
+innerHeight
+"
+)
+.
+get
+;
+/
+/
 try
 to
 set
@@ -445,6 +487,10 @@ haven
 '
 t
 changed
+except
+via
+getting
+replaced
 /
 /
 try
@@ -465,6 +511,59 @@ c
 contentWindow
 .
 innerWidth
+=
+=
+100
+)
+;
+}
+catch
+(
+ex
+)
+{
+success
+=
+false
+;
+}
+ok
+(
+success
+"
+can
+'
+t
+access
+hidden
+iframe
+innerWidth
+or
+it
+'
+s
+not
+100
+"
+)
+;
+success
+=
+false
+;
+try
+{
+success
+=
+(
+innerWidthGetter
+.
+call
+(
+c
+.
+contentWindow
+)
 =
 =
 0
@@ -521,6 +620,59 @@ c
 contentWindow
 .
 innerHeight
+=
+=
+100
+)
+;
+}
+catch
+(
+ex
+)
+{
+success
+=
+false
+;
+}
+ok
+(
+success
+"
+can
+'
+t
+access
+hidden
+iframe
+innerHeight
+or
+it
+'
+s
+not
+100
+"
+)
+;
+success
+=
+false
+;
+try
+{
+success
+=
+(
+innerHeightGetter
+.
+call
+(
+c
+.
+contentWindow
+)
 =
 =
 0
