--- a/dom/tests/mochitest/bugs/test_resize_move_windows.html
+++ b/dom/tests/mochitest/bugs/test_resize_move_windows.html
@@ -212,6 +212,56 @@ previousY
 previousWidth
 previousHeight
 ;
+[
+"
+innerWidth
+"
+"
+innerHeight
+"
+"
+screenX
+"
+"
+screenY
+"
+"
+outerWidth
+"
+"
+outerHeight
+"
+]
+.
+map
+(
+function
+(
+name
+)
+{
+window
+[
+name
++
+"
+Getter
+"
+]
+=
+Object
+.
+getOwnPropertyDescriptor
+(
+window
+name
+)
+.
+get
+;
+}
+)
+;
 function
 backValues
 (
@@ -592,47 +642,87 @@ hits
 =
 5
 ;
+function
+getProp
+(
+propName
+)
+{
+return
+window
+[
+propName
++
+"
+Getter
+"
+]
+.
+call
+(
+aWindow
+)
+;
+}
 var
 originalWidth
 =
-aWindow
-.
+getProp
+(
+"
 innerWidth
+"
+)
 ;
 var
 originalHeight
 =
-aWindow
-.
+getProp
+(
+"
 innerHeight
+"
+)
 ;
 var
 originalX
 =
-aWindow
-.
+getProp
+(
+"
 screenX
+"
+)
 ;
 var
 originalY
 =
-aWindow
-.
+getProp
+(
+"
 screenY
+"
+)
 ;
 var
 oWidth
 =
-aWindow
-.
+getProp
+(
+"
 outerWidth
+"
+)
 ;
 var
 oHeight
 =
-aWindow
-.
+getProp
+(
+"
 outerHeight
+"
+)
 ;
 function
 changeCondition
@@ -693,11 +783,14 @@ changeTest
 (
 )
 {
-is
+ise
 (
-aWindow
-.
+getProp
+(
+"
 innerWidth
+"
+)
 originalWidth
 "
 Window
@@ -710,11 +803,14 @@ changed
 "
 )
 ;
-is
+ise
 (
-aWindow
-.
+getProp
+(
+"
 innerHeight
+"
+)
 originalHeight
 "
 Window
@@ -727,11 +823,14 @@ changed
 "
 )
 ;
-is
+ise
 (
-aWindow
-.
+getProp
+(
+"
 screenX
+"
+)
 originalX
 "
 Window
@@ -745,11 +844,14 @@ changed
 "
 )
 ;
-is
+ise
 (
-aWindow
-.
+getProp
+(
+"
 screenY
+"
+)
 originalY
 "
 Window
@@ -763,11 +865,14 @@ changed
 "
 )
 ;
-is
+ise
 (
-aWindow
-.
+getProp
+(
+"
 outerWidth
+"
+)
 oWidth
 "
 Window
@@ -780,11 +885,14 @@ changed
 "
 )
 ;
-is
+ise
 (
-aWindow
-.
+getProp
+(
+"
 outerHeight
+"
+)
 oHeight
 "
 Window
