Bug 1026350 - Part 1: Inputport API implementation. r=baku
UltraBlame original commit: 5508dd802e48de4139bf3f45df3d27f5bc1cfde2

--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -1401,6 +1401,48 @@ a
 DOM
 peer
 !
+{
+name
+:
+"
+AVInputPort
+"
+b2g
+:
+true
+pref
+:
+"
+dom
+.
+inputport
+.
+enabled
+"
+permission
+:
+[
+"
+inputport
+"
+]
+}
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
 "
 BarProp
 "
@@ -3499,6 +3541,48 @@ a
 DOM
 peer
 !
+{
+name
+:
+"
+DisplayPortInputPort
+"
+b2g
+:
+true
+pref
+:
+"
+dom
+.
+inputport
+.
+enabled
+"
+permission
+:
+[
+"
+inputport
+"
+]
+}
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
 "
 Document
 "
@@ -4489,6 +4573,48 @@ peer
 "
 History
 "
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
+{
+name
+:
+"
+HDMIInputPort
+"
+b2g
+:
+true
+pref
+:
+"
+dom
+.
+inputport
+.
+enabled
+"
+permission
+:
+[
+"
+inputport
+"
+]
+}
 /
 /
 IMPORTANT
@@ -6386,6 +6512,90 @@ peer
 "
 InputEvent
 "
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
+{
+name
+:
+"
+InputPort
+"
+b2g
+:
+true
+pref
+:
+"
+dom
+.
+inputport
+.
+enabled
+"
+permission
+:
+[
+"
+inputport
+"
+]
+}
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
+{
+name
+:
+"
+InputPortManager
+"
+b2g
+:
+true
+pref
+:
+"
+dom
+.
+inputport
+.
+enabled
+"
+permission
+:
+[
+"
+inputport
+"
+]
+}
 /
 /
 IMPORTANT
