--- a/dom/base/test/test_bug116083.html
+++ b/dom/base/test/test_bug116083.html
@@ -1298,6 +1298,90 @@ application
 javascript
 "
 >
+const
+Cc
+=
+SpecialPowers
+.
+Cc
+;
+const
+Ci
+=
+SpecialPowers
+.
+Ci
+;
+function
+hasExpectedFlavors
+(
+)
+{
+var
+flavors
+=
+[
+"
+text
+/
+plain
+"
+"
+text
+/
+html
+"
+"
+application
+/
+x
+-
+moz
+-
+nativehtml
+"
+]
+;
+var
+cb
+=
+Cc
+[
+"
+mozilla
+.
+org
+/
+widget
+/
+clipboard
+;
+1
+"
+]
+.
+getService
+(
+Ci
+.
+nsIClipboard
+)
+;
+return
+cb
+.
+hasDataMatchingFlavors
+(
+flavors
+flavors
+.
+length
+cb
+.
+kGlobalClipboard
+)
+;
+}
 SimpleTest
 .
 waitForExplicitFinish
@@ -1421,6 +1505,21 @@ style
 +
 "
 passed
+"
+)
+;
+ok
+(
+hasExpectedFlavors
+(
+)
+"
+The
+clipboard
+has
+the
+expected
+flavors
 "
 )
 ;
