Bug 1147562 - Update remaining callsites of newChannel before landing the shim in dom/ (r=sicking)
UltraBlame original commit: 3629ce36619109fae7be228a6df9658f0a1ab40d

--- a/dom/base/test/chrome/test_bug682305.html
+++ b/dom/base/test/chrome/test_bug682305.html
@@ -425,6 +425,7 @@ function
 CustomChannel
 (
 uri
+loadInfo
 )
 {
 this
@@ -437,6 +438,12 @@ originalURI
 =
 uri
 ;
+this
+.
+loadInfo
+=
+loadInfo
+;
 }
 CustomChannel
 .
@@ -447,6 +454,9 @@ URI
 :
 null
 originalURI
+:
+null
+loadInfo
 :
 null
 contentCharset
@@ -811,6 +821,24 @@ nsIURI
 )
 ;
 }
+newChannel2
+:
+function
+newChannel2
+(
+URI
+loadInfo
+)
+{
+return
+new
+CustomChannel
+(
+URI
+loadInfo
+)
+;
+}
 newChannel
 :
 function
@@ -820,8 +848,7 @@ URI
 )
 {
 return
-new
-CustomChannel
+newChannel2
 (
 URI
 )
