Bug 1038811 - Push Notifications - Tests. r=nsm
UltraBlame original commit: f75774fac6e2df9e9b673878514e9f94caa8953d

--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -9387,6 +9387,38 @@ a
 DOM
 peer
 !
+{
+name
+:
+"
+PushManager
+"
+pref
+:
+"
+dom
+.
+push
+.
+enabled
+"
+}
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
 "
 RadioNodeList
 "
@@ -9793,6 +9825,38 @@ name
 :
 "
 ServiceWorkerContainer
+"
+pref
+:
+"
+dom
+.
+serviceWorkers
+.
+enabled
+"
+}
+/
+/
+IMPORTANT
+:
+Do
+not
+change
+this
+list
+without
+review
+from
+a
+DOM
+peer
+!
+{
+name
+:
+"
+ServiceWorkerRegistration
 "
 pref
 :
